--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -198,3 +198,4 @@ exec_always --no-startup-id picom
 exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/music_related_wallpapers/1586777051800.jpg
 
 # TEST TO SEE IF IT WORKS :)
+# ANOTHER TEST :)
