--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -195,5 +195,5 @@ bindsym $mod+p gaps outer current minus 5
 exec_always --no-startup-id picom
 
 # Set Wallpaper
-exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/music_related_wallpapers/1586777051800.jpg
+exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/general_wallpapers/1588032628176.png
 
