--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -197,3 +197,5 @@ exec_always --no-startup-id picom
 # Set Wallpaper
 exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/music_related_wallpapers/1586777051800.jpg
 
+
+# THIS WAS A COMMENT, DAD SAW ME PUT THIS THERE
