--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -204,7 +204,7 @@ exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/m
 exec --no-startup-id xfce4-power-manager
 
 # Launch Firefox
-bindsym $mod+b exec --no-startup-id firefox
+bindsym $mod+b exec --no-startup-id brave
 
 #Launch Ranger
 bindsym $mod+n exec --no-startup-id ranger
