--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -54,10 +54,10 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -78,10 +78,13 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+#bindsym $mod+h split h
+
+# split toggle
+bindsym $mod+t split toggle
 
 # split in vertical orientation
-bindsym $mod+v split v
+#bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -176,9 +179,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
 
 # Enable Gaps
 for_window [class="^.*"] border pixel 2
@@ -192,7 +195,10 @@ bindsym $mod+o gaps outer current plus 5
 bindsym $mod+p gaps outer current minus 5
 
 # Run xrandr to fix dpi
-exec --no-startup-id xrandr --dpi 192
+exec_always --no-startup-id xrandr --dpi 192
+
+# Launch polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch picom
 exec_always --no-startup-id picom
