--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -27,14 +27,15 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/example]
+[bar/mybar]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+height = 40
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+radius = 0.0
 fixed-center = false
+dpi = 0
 
 background = ${colors.background}
 foreground = ${colors.foreground}
