--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -37,6 +37,10 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Use acpilight to adjust backlight brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -207,7 +211,7 @@ exec_always --no-startup-id picom
 exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/music_related_wallpapers/boris_flood_live_performance.jpg
 
 # Open xfce4-power-manager
-exec --no-startup-id xfce4-power-manager
+#exec --no-startup-id xfce4-power-manager
 
 # Launch Firefox
 bindsym $mod+b exec --no-startup-id brave
