--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -51,7 +51,7 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id ~/.local/bin/dmenu.sh
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -208,7 +208,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id picom
 
 # Set Wallpaper
-exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/music_related_wallpapers/boris_flood_live_performance.jpg
+exec_always setbg
 
 # Open xfce4-power-manager
 #exec --no-startup-id xfce4-power-manager
@@ -216,6 +216,9 @@ exec_always --no-startup-id feh --bg-fill /home/jacob/PersonalFiles/wallpapers/m
 # Launch Firefox
 bindsym $mod+b exec --no-startup-id brave
 
-#Launch Ranger
+# Launch Ranger
 bindsym $mod+n exec --no-startup-id ranger
+
+# Configure TV command
+bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
 
