--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -51,7 +51,9 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id ~/.local/bin/dmenu.sh
+#bindsym $mod+d exec --no-startup-id ~/.local/bin/dmenu.sh
+bindsym $mod+d exec --no-startup-id dmenu_run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
