finally fixed /usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/home/jacob/.local/bin so it works with dmenu

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -202,6 +202,9 @@ bindsym $mod+p gaps outer current minus 5
 # Run xrandr to fix dpi
 exec_always --no-startup-id xrandr --dpi 192
 
+# Run Unclutter
+exec --no-startup-id unclutter
+
 # Launch polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
