--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -210,6 +210,8 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch picom
 exec_always --no-startup-id picom 
+# Kill picom
+bindsym $mod+shift+p exec --no-startup-id killall picom
 
 # Set Wallpaper
 #exec --no-startup-id setbg
@@ -219,7 +221,7 @@ exec_always --no-startup-id feh --bg-fill ~/PersonalFiles/wallpapers/music_relat
 bindsym $mod+b exec --no-startup-id brave
 
 # Launch Ranger
-bindsym $mod+n exec --no-startup-id ranger
+bindsym $mod+n exec --no-startup-id termite -e ranger
 
 # Configure TV command
 bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
