finally figured out wallpaper-setting!

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -214,8 +214,8 @@ exec_always --no-startup-id picom
 bindsym $mod+shift+p exec --no-startup-id killall picom
 
 # Set Wallpaper
-#exec --no-startup-id setbg
-exec_always --no-startup-id feh --bg-fill ~/PersonalFiles/wallpapers/music_related_wallpapers/boris_flood_live_performance.jpg
+exec --no-startup-id setbg
+#exec_always --no-startup-id feh --bg-fill ~/PersonalFiles/wallpapers/music_related_wallpapers/boris_flood_live_performance.jpg
 
 # Launch Web Browser
 bindsym $mod+b exec --no-startup-id brave
