--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -35,7 +35,7 @@ height = 40
 ;offset-y = 1%
 radius = 0.0
 fixed-center = false
-dpi = 0
+dpi = 192
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -241,21 +241,21 @@ ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-foreground = ${colors.foreground-alt}
 
-[module/eth]
-type = internal/network
-interface = eno1
-interval = 3.0
+#[module/eth]
+#type = internal/network
+#interface = eno1
+#interval = 3.0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
+#format-connected-underline = #55aa55
+#format-connected-prefix = " "
+#format-connected-prefix-foreground = ${colors.foreground-alt}
+#label-connected = %local_ip%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+#format-disconnected =
+#;format-disconnected = <label-disconnected>
+#;format-disconnected-underline = ${self.format-connected-underline}
+#;label-disconnected = %ifname% disconnected
+#;label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
