--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -189,7 +189,7 @@ bindsym $mod+r mode "resize"
 #}
 
 # Enable Gaps
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 3
 gaps inner 20
 gaps outer 20
 
@@ -209,7 +209,7 @@ exec --no-startup-id unclutter
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch xcompmgr
-exec_always --no-startup-id xcompmgr
+exec_always --no-startup-id xcompmgr -c
 # Kill xcompmgr
 bindsym $mod+shift+p exec --no-startup-id killall xcompmgr
 
