more minor changes

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -208,14 +208,13 @@ exec --no-startup-id unclutter
 # Launch polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-# Launch xcompmgr
-exec_always --no-startup-id xcompmgr -c
-# Kill xcompmgr
-bindsym $mod+shift+p exec --no-startup-id killall xcompmgr
+# Launch compositor
+exec_always --no-startup-id picom
+# Kill compositor
+bindsym $mod+shift+p exec --no-startup-id killall picom
 
 # Set Wallpaper
 exec --no-startup-id setbg
-#exec_always --no-startup-id feh --bg-fill ~/PersonalFiles/wallpapers/music_related_wallpapers/boris_flood_live_performance.jpg
 
 # Launch Web Browser
 bindsym $mod+b exec --no-startup-id brave
