--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -217,7 +217,8 @@ bindsym $mod+shift+p exec --no-startup-id killall picom
 exec --no-startup-id setbg
 
 # Launch Web Browser
-bindsym $mod+b exec --no-startup-id brave
+bindsym $mod+b exec --no-startup-id vivaldi-stable
+bindsym $mod+shift+b exec --no-startup-id torbrowser-launcher
 
 # Launch Ranger
 bindsym $mod+n exec --no-startup-id termite -e ranger
@@ -225,3 +226,6 @@ bindsym $mod+n exec --no-startup-id termite -e ranger
 # Configure TV command
 bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
 bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary
+
+# Take screenshot with scrot
+bindsym --release Print exec --no-startup-id scrot 
