--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -58,7 +58,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = xkeyboard filesystem xbacklight-acpi pulseaudio memory cpu wlan eth battery temperature date powermenu
+modules-right = xkeyboard filesystem backlight-acpi pulseaudio memory cpu wlan eth battery temperature weather date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -272,6 +272,13 @@ format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
 label = %date% %time%
+
+[module/weather]
+
+type = custom/script
+exec = weather
+interval = 5000
+format-underline = #50FF00
 
 [module/pulseaudio]
 type = internal/pulseaudio
