--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -223,8 +223,9 @@ exec --no-startup-id setbg
 bindsym $mod+b exec --no-startup-id firefox-nightly
 bindsym $mod+shift+b exec --no-startup-id torbrowser-launcher
 
-# Launch Ranger
+# Launch File Manager
 bindsym $mod+n exec --no-startup-id termite -e ranger
+bindsym $mod+shift+n exec --no-startup-id pcmanfm
 
 # Configure TV command
 bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
@@ -233,4 +234,3 @@ bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary
 # Take screenshot with scrot
 bindsym --release Print exec --no-startup-id scrot 
 
-#obligatory comment 
