--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -49,37 +49,36 @@ cursor          = #a8a19f
 background = rgba(0, 0, 0, 0.8)
 
 # black
-color0  = #1b1918
-color8  = #766e6b
+color0  = #192033
+color8  = #666666
 
 # red
-color1  = #f22c40
-color9  = #f22c40
+color1  = #a62a3e
+color9  = #f04758
 
 # green
-color2  = #5ab738
-color10 = #5ab738
+color2  = #38912b
+color10 = #93c724
 
 # yellow
-color3  = #d5911a
-color11 = #d5911a
+color3  = #b27d12
+color11 = #ddb62b
 
 # blue
-color4  = #407ee7
-color12 = #407ee7
+color4  = #355c9a
+color12 = #45a3e6
 
 # magenta
-color5  = #6666ea
-color13 = #6666ea
+color5  = #7c4f9f
+color13 = #c953ef
 
 # cyan
-color6  = #00ad9c
-color14 = #00ad9c
+color6  = #258f8f
+color14 = #60c6c8
 
 # white
-color7  = #a8a19f
-color15 = #f1efee
-
+color7  = #77858c
+color15 = #c0c0c0
 
 [hints]
 #font = Monospace 12
