--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -48,6 +48,8 @@ cursor          = #a8a19f
 #background      = #1b1918
 background = rgba(0, 0, 0, 0.9)
 
+# color scheme from terminal.sexy -> xcolors.net -> euphrasia. terminal color is just black
+
 # black
 color0  = #192033
 color8  = #666666
