--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -37,6 +37,13 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Media player controls
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+#bindsym XF86AudioPlay exec playerctl play
+#bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+
 # Use acpilight to adjust backlight brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
@@ -229,6 +236,7 @@ bindsym $mod+shift+n exec --no-startup-id pcmanfm
 
 # Launch Music Player
 bindsym $mod+m exec --no-startup-id termite -e ncmpcpp
+bindsym $mod+shift+m exec --no-startup-id spotify
 
 # Configure TV command
 bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
@@ -236,4 +244,5 @@ bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary
 
 # Take screenshot with scrot
 bindsym --release Print exec --no-startup-id scrot 
+
 
