--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -58,7 +58,7 @@ bindsym $mod+Return exec --no-startup-id termite
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "fixed-10"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
