--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -52,13 +52,13 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id termite
+bindsym $mod+Return exec --no-startup-id termite 
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -fn "fixed-10"
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "Source Code Pro-10"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -86,8 +86,7 @@ bindsym $mod+Shift+semicolon move right
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+Up move up bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 #bindsym $mod+h split h
@@ -220,6 +219,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch compositor
 exec_always --no-startup-id picom
+
 # Kill compositor
 bindsym $mod+shift+p exec --no-startup-id killall picom
 
