--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -135,13 +135,13 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 0;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.03;
+fade-in-step = 0.00;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+fade-out-step = 0.00;
 # Fade windows in/out when opening/closing
-# no-fading-openclose = true;
+ no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
@@ -207,7 +207,7 @@ wintypes:
     tooltip =
     {
         # fade: Fade the particular type of windows.
-        fade = true;
+        fade = false;
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
