--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -70,9 +70,9 @@ module-margin-right = 1
 
 font-0 = fixed:pixelsize=9;1
 
-modules-left = bspwm i3
-modules-center = mpd
-modules-right = xkeyboard filesystem backlight-acpi pulseaudio memory cpu wlan eth battery temperature weather date powermenu
+modules-left = bspwm i3 
+modules-center = 
+modules-right = mpd xkeyboard filesystem backlight-acpi pulseaudio memory cpu wlan eth battery temperature weather date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -192,7 +192,8 @@ icon-play = 
 icon-pause = 
 icon-next = 
 
-label-song-maxlen = 25
+label-song =  %artist% - %title%
+label-song-maxlen = 70
 label-song-ellipsis = true
 
 [module/xbacklight]
