--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -192,6 +192,9 @@ icon-play = 
 icon-pause = 
 icon-next = 
 
+click-left = $TERMINAL -e ncmpcpp
+click-right = mpc toggle
+
 label-song =  %artist% - %title%
 label-song-maxlen = 70
 label-song-ellipsis = true
