--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -52,7 +52,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty 
+bindsym $mod+Return exec --no-startup-id termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -219,7 +219,7 @@ exec --no-startup-id xsetwacom --set "Wacom Intuos S 2 Pen stylus" MapToOutput 1
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch compositor
-exec_always --no-startup-id picom
+exec_always --no-startup-id picom 
 
 # Kill compositor
 bindsym $mod+shift+p exec --no-startup-id killall picom
@@ -232,11 +232,11 @@ bindsym $mod+b exec --no-startup-id firefox
 bindsym $mod+shift+b exec --no-startup-id torbrowser-launcher
 
 # Launch File Manager
-bindsym $mod+n exec --no-startup-id alacritty -e ranger
+bindsym $mod+n exec --no-startup-id termite -e ranger
 bindsym $mod+shift+n exec --no-startup-id pcmanfm
 
 # Launch Music Player
-bindsym $mod+m exec --no-startup-id alacritty -e ncmpcpp
+bindsym $mod+m exec --no-startup-id termite -e ncmpcpp
 bindsym $mod+shift+m exec --no-startup-id spotify
 
 # Configure TV command
