--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -78,10 +78,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -246,4 +246,6 @@ bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary
 # Take screenshot with scrot
 bindsym --release Print exec --no-startup-id scrot 
 
+# Launch Pavucontrol
+bindsym $mod+shift+a exec --no-startup-id pavucontrol 
 
