--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -219,7 +219,7 @@ exec --no-startup-id xsetwacom --set "Wacom Intuos S 2 Pen stylus" MapToOutput 1
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Launch compositor
-exec_always --no-startup-id picom 
+exec_always --no-startup-id picom -b
 
 # Kill compositor
 bindsym $mod+shift+p exec --no-startup-id killall picom
