--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -1,3 +1,6 @@
+label editor = nvim "$@"
+label pager  = "$PAGER" -- "$@"
+
 # vim: ft=cfg
 #
 # This is the configuration file of "rifle", ranger's file executor/opener.
