--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -46,7 +46,9 @@ glx-copy-from-front = false;
 # Useless with --glx-use-copysubbuffermesa.
 # Partially breaks --resize-damage.
 # Defaults to undefined.
-glx-swap-method = "2";
+
+#glx-swap-method = "0";
+use-damage=true
 
 #################################
 #
