--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -6,7 +6,7 @@
 #cell_width_scale = 1.0
 #clickable_url = true
 #dynamic_title = true
-font = Source Code Pro 10
+font = Source Code Pro 11
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
@@ -40,10 +40,13 @@ scrollback_lines = 10000
 # "off", "left" or "right"
 #scrollbar = off
 
+
 [colors]
 # special
-foreground      = #a8a19f
-foreground_bold = #a8a19f
+#foreground      = #a8a19f
+#foreground_bold = #a8a19f
+foreground       = #ffffff
+foreground_blod  = #ffffff
 cursor          = #a8a19f
 #background      = #1b1918
 background = rgba(0, 0, 0, 0.8)
