added displayselect script

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -203,7 +203,7 @@ label-song-ellipsis = true
 type = internal/xbacklight
 
 format = <label> <bar>
-label = BL
+label = BL %
 
 bar-width = 10
 bar-indicator = |
