--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -1,8 +1,10 @@
+db_file			"~/.config/mpd/database"
+pid_file		"~/.config/mpd/pid"
 music_directory		"~/PersonalFiles/music"
 playlist_directory	"~/.config/mpd/playlists"
 
 auto_update "yes"
-bind_to_address "127.0.0.1"
+bind_to_address "0.0.0.0"
 restore_paused "yes"
 max_output_buffer_size "16384"
 
