--- a/config_dir/.config/i3/config
+++ b/config_dir/.config/i3/config
@@ -50,7 +50,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id termite
+bindsym $mod+Return exec --no-startup-id urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -230,12 +230,12 @@ bindsym $mod+b exec --no-startup-id firefox
 bindsym $mod+shift+b exec --no-startup-id torbrowser-launcher
 
 # Launch File Manager
-bindsym $mod+n exec --no-startup-id termite -e ranger
+bindsym $mod+n exec --no-startup-id urxvt -e ranger
 bindsym $mod+shift+n exec --no-startup-id thunar
 
 # Launch Music Player
 exec --no-startup-id mpd
-bindsym $mod+m exec --no-startup-id termite -e ncmpcpp
+bindsym $mod+m exec --no-startup-id urxvt -e ncmpcpp
 bindsym $mod+shift+m exec --no-startup-id spotify
 
 # Configure TV command
