--- a/config_dir/.config/mpv/mpv.conf
+++ b/config_dir/.config/mpv/mpv.conf
@@ -54,7 +54,7 @@
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
-profile=gpu-hq
+#profile=gpu-hq
 x11-bypass-compositor=no
 
 # Force video to lock on the display's refresh rate, and change video and audio
