--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -235,7 +235,7 @@ bindsym $mod+shift+m exec --no-startup-id spotify
 
 # Configure TV command
 bindsym $mod+shift+t exec --no-startup-id xrandr --output HDMI-1 --auto --primary --right-of eDP-1
-bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary && xrandr --output HDMI-1 off
+bindsym $mod+shift+y exec --no-startup-id xrandr --output eDP-1 --auto --primary 
 
 # Take screenshot with scrot
 bindsym --release Print exec --no-startup-id scrot 
