--- a/configs/.config/mpd/mpd.conf
+++ b/configs/.config/mpd/mpd.conf
@@ -1,5 +1,6 @@
 music_directory		"~/PersonalFiles/music"
 playlist_directory	"~/.config/mpd/playlists"
+pid_file		"~/.config/mpd/pid"
 
 auto_update "yes"
 bind_to_address "any"
