--- a/configs/.config/polybar/config
+++ b/configs/.config/polybar/config
@@ -220,10 +220,10 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "🔥 "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
-label = %percentage:2%%
+label = 🔥%percentage:2%%
 
 [module/memory]
 type = internal/memory
