--- a/configs/.config/mpd/mpd.conf
+++ b/configs/.config/mpd/mpd.conf
@@ -2,8 +2,12 @@ music_directory		"~/PersonalFiles/music"
 playlist_directory	"~/.config/mpd/playlists"
 
 auto_update "yes"
-bind_to_address "any"
+bind_to_address "127.0.0.1"
+port "6601"
 restore_paused "yes"
+db_file "~/.config/mpd/db"
+pid_file "~/.config/mpd/pid"
+log_file "~/.config/mpd/log"
 max_output_buffer_size "16384"
 
 audio_output {
