--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -34,7 +34,7 @@ glx-copy-from-front = false;
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
 # Recommended if it works.
- glx-no-rebind-pixmap = true;
+# glx-no-rebind-pixmap = true;
 
 # GLX backend: GLX buffer swap method we assume.
 # Could be undefined (0), copy (1), exchange (2), 3-6, or buffer-age (-1).
@@ -46,9 +46,7 @@ glx-copy-from-front = false;
 # Useless with --glx-use-copysubbuffermesa.
 # Partially breaks --resize-damage.
 # Defaults to undefined.
-
-#glx-swap-method = "2";
-use-damage = true
+#glx-swap-method = "undefined";
 
 #################################
 #
@@ -137,13 +135,13 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 0;
+fade-delta = 4;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.00;
+fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.00;
+fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
- no-fading-openclose = true;
+# no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
@@ -209,7 +207,7 @@ wintypes:
     tooltip =
     {
         # fade: Fade the particular type of windows.
-        fade = false;
+        fade = true;
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
