added space in volume script before icon

--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -11,6 +11,8 @@
 # GLX backend is typically much faster but depends on a sane driver.
 backend = "glx";
 
+#use-damage = true;
+
 #################################
 #
 # GLX backend
