--- a/homedir/.imwheelrc
+++ b/homedir/.imwheelrc
@@ -2,5 +2,8 @@
 "^chromium$"
     None, Up, Button4, 3
     None, Down, Button5, 3 
+"^brave-browser$"
+    None, Up, Button4, 3
+    None, Down, Button5, 3 
 "^Navigator$"
     @Exclude
