added spotify to imwheelrc

--- a/homedir/.imwheelrc
+++ b/homedir/.imwheelrc
@@ -5,5 +5,8 @@
 "^brave-browser$"
     None, Up, Button4, 3
     None, Down, Button5, 3 
+"^spotify$"
+    None, Up, Button4, 3
+    None, Down, Button5, 3 
 "^Navigator$"
     @Exclude
