--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -129,6 +129,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
+opacity-rule = [ "100:class_g = 'Navigator'" ];
+opacity-rule = [ "100:class_g = 'Nightly'" ];
 #
 # opacity-rule = []
 
