actually fixed gtk dialog issue

--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -129,8 +129,12 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
-opacity-rule = [ "100:class_g = 'Navigator'" ];
-opacity-rule = [ "100:class_g = 'Nightly'" ];
+opacity-rule = [ 
+"100:class_g = 'Navigator'", 
+"100:class_g = 'firefox'", 
+"100:class_g = 'Nightly'",
+];
+
 #
 # opacity-rule = []
 
