--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -133,6 +133,8 @@ opacity-rule = [
 "100:class_g = 'Navigator'", 
 "100:class_g = 'firefox'", 
 "100:class_g = 'Nightly'",
+"100:class_g = 'Nm-applet'",
+"100:class_g = 'discord'",
 ];
 
 #
